# OpenMP_sample

./: CMakeLists.txt
src/: main.cpp
